--- a/app.json
+++ b/app.json
@@ -10,7 +10,7 @@
       "Gojo",
       "Anime"
     ],
-    "repository": "https://github.com/Gojo-Bots/Gojo_Satoru",
+    "repository": "https://github.com/Recordu/Gojo_Satoru",
     "success_url": "https://t.me/GojoSuperbot",
     "env": {
       "BOT_TOKEN": {
